# StreetSafe

./: README.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/net/chitholian/potholesdetection/: AutoFitTextureView.java  CameraActivity.java  CameraConnectionFragment.java  Classifier.java  DetectorActivity.java  LegacyCameraConnectionFragment.java  OverlayView.java  TFLiteObjectDetectionAPIModel.java
app/src/main/java/net/chitholian/potholesdetection/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java  SplitTimer.java
app/src/main/java/net/chitholian/potholesdetection/tracking/: MultiBoxTracker.java  ObjectTracker.java
app/src/main/jni/: CMakeLists.txt  imageutils_jni.cc  rgb2yuv.cc  rgb2yuv.h  yuv2rgb.cc  yuv2rgb.h
app/src/main/jni/object_tracking/: config.h  flow_cache.h  frame_pair.cc  frame_pair.h  geom.h  gl_utils.h  image-inl.h  image.h  image_data.h  image_neon.cc  image_utils.h  integral_image.h  jni_utils.h  keypoint.h  keypoint_detector.cc  keypoint_detector.h  logging.cc  logging.h  object_detector.cc  object_detector.h  object_model.h  object_tracker.cc  object_tracker.h  object_tracker_jni.cc  optical_flow.cc  optical_flow.h  sprite.h  time_log.cc  time_log.h  tracked_object.cc  tracked_object.h  utils.h  utils_neon.cc
app/src/main/res/layout/: activity_camera.xml  camera_connection_fragment.xml  camera_connection_fragment_tracking.xml  list_text_item.xml
app/src/main/res/values/: strings.xml
